--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -18,6 +18,8 @@ box-sizing: border-box;
     --grey-blue: #AFB1B8;
     --items:3;
     --indent:30px;
+    --anim-fast:250ms;
+    --cubik:cubik-bezier (0.4, 0, 0.2, 1);
 }
 
 body {
@@ -91,8 +93,82 @@ display: inline-block;
 border-bottom: 1px solid var(--grey);
 
 }
-/* img overiay */
-.overiay{
+
+.backdrop{
+    /* position: fixed; */
+    /* top: 0;
+    left: 0; */
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+    /* background-color: rgba(255, 255, 255, 0.1); */
+    opacity: 1;
+    visibility: visible;
+    
+}
+.backdrop.is-hidden{
+    visibility: hidden;
+    opacity: 0;
+    pointer-events: none;
+}
+.backdrop.is-hidden .modal {
+    transform: translate(-50%, -50%) scale(0.7);
+}
+.modal{
+    width: 528px;
+    height: 581px; ;
+}
+.icon-close{
+
+    top: 235;
+    left: 1032;
+}
+.picture{
+    position: relative;
+    overflow: hidden;
+
+}
+.team-it:hover .portfolio-overlay{
+transform: translateY(0);
+}
+
+.portfolio-overlay{
+    padding: 15px;
+    backdrop-filter: blur(3px);
+    background-color:rgba(33, 150, 243, 0.9); ;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%; 
+transition: transform var(--anim-fast);
+
+    transform: translateY(100%);
+
+
+}
+.portfolio-desc{
+    /* position: absolute; */
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.55;
+    letter-spacing: 0.03em;
+    color: var(--white);
+    margin-left: 24px;
+    margin-right: 24px;
+    
+}
+
+
+
+
+/* img overliay */
+.overliay{
     max-width: 1600px;
     height: 600px;
     margin-left: auto;
@@ -134,9 +210,7 @@ background-color: var(--grey-bg);
     margin-right: 10px;
     align-items: center;
 }
-/* .meil{
-    --color4:var(--grey-text)
-} */
+
 .contact-link:hover,
 .contact-link:focus{
     color: var(--blue);
@@ -179,15 +253,21 @@ fill: var(--white);
     width: 44px;
     height: 44px;
     color: var(--grey-blue);
-    
     border-radius: 50%;
+
+    /* transition-property: color;
+    transition-duration: var(--anim-fast);
+    transition-timing-function: ease-in-out; */
+    
+transition: color,background-color, 250ms, ease-in-out;
+
 }
 .sicial-media-linc:hover,
 .sicial-media-linc:focus{
     background-color: var(--blue);
 }
 .client-list{
-    
+    transition: color, border-color, 250ms, ease-in-out;
 
     box-sizing: border-box;
     border: 1px solid var(--grey-blue);
@@ -206,28 +286,17 @@ fill: var(--grey-blue);
     height: 100%;
 }
 
-.client-list:hover,
-.client-list:focus{
-    color: var(--grey-blue);
+
+.client-icon{
+    fill: currentColor;
 }
 .client-list:hover,
 .client-list:focus{
     color: var(--blue);
     border-color: var(--blue);
 }
-.client-list:hover,
-.client-list:focus{
-    fill: currentColor;
-}
 
-.client-icon:hover{
-    fill: var(--blue);
-}
 
-.client:hover,
-.client:focus{
-    color: var(--blue);
-}
 .client-items{
     display: flex;
 margin-top: 50px;
@@ -247,6 +316,8 @@ width: 170px;
     background-color: var(--white);
     justify-content: center;
     align-items: center;
+
+    transition: color, border-color, 250ms, ease-in-out;
 }
 
 
@@ -269,6 +340,8 @@ width: 170px;
 
 .footer-media-icon{
     fill: var(--white);
+
+    transition: color, 250ms, ease-in-out;
     
 }
 .footer-sicial{
@@ -279,7 +352,9 @@ width: 170px;
         border-radius: 50%;
         width: 44px;
         height: 44px;
-        background-color: rgba(255, 255, 255, 0.1);;
+        background-color: rgba(255, 255, 255, 0.1);
+
+        transition: color, background-color, 250ms, ease-in-out;
 }
 .footer-sicial:hover,
 .footer-sicial:focus{
@@ -294,6 +369,30 @@ width: 170px;
 .footer-sicial:focus .footer-media-icon{
     fill: var(--white);
 
+}
+/* posishion */
+
+.about-a{
+    position: relative;
+}
+.label{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+width: 370px; ;
+height: 70px;
+    background: rgba(47, 48, 58, 0.8);
+}
+.meta{
+    font-family: "Roboto";
+    font-weight: 700;
+    font-size: 14px;
+line-height: 1.14;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+color: var(--white);
 }
 
 .fotter{
@@ -359,6 +458,8 @@ margin-right: 50px;
     display:inline-block;
     align-items: center;
     color: var(--black-text);
+
+    transition: color, 250ms, ease-in-out;
 }
 
 .header-link:last-child {
@@ -379,7 +480,7 @@ margin-right: 50px;
     /* info@devstudio.com */
     color: var(--grey-text);
 
-    
+    transition: color, 250ms, ease-in-out;
 }
 
 .contact-link:hover,
@@ -568,6 +669,7 @@ justify-content: space-evenly;
     background-color: var(--blue);
     color: var(--white);
 
+transition: color, background-color, 250ms, ease-in-out;
 }
 
 .portfolio-button {
@@ -585,6 +687,8 @@ justify-content: space-evenly;
     font-size: 16px;
     line-height: 1.6;
     color: var(--white);
+
+    transition: color, 250ms, ease-in-out;
 }
 
 
@@ -594,6 +698,13 @@ justify-content: space-evenly;
     justify-content: space-between;
     
 }
+.label{
+    overflow-x: visible;
+    bottom: 0;
+}
+
+
+
 .about-a:nth-child(-n+3) {
     
     margin-right: 0;
@@ -650,6 +761,7 @@ margin-bottom: 50px;
     border: 0px;
     padding: 6px 22px;
 margin-right: 8px;
+transition: color, background-color, box-shadow, border-radius, 250ms, ease-in-out;
 }
 
 .button-list-a {
@@ -664,6 +776,8 @@ margin-right: 8px;
     padding: 6px 22px;
     margin-right: 8px;
     background: var(--grey-bg);
+
+    transition: color, background-color, box-shadow, border-radius, 250ms, ease-in-out;
 }
 
 .button-list-b {
@@ -680,6 +794,8 @@ margin-right: 8px;
     color: var(--black-text);
     padding: 6px 22px;
     margin-right: 8px;
+
+    transition: color, background-color, box-shadow, border-radius, 250ms, ease-in-out;
 }
 
 .button-list-c {
@@ -697,6 +813,8 @@ margin-right: 8px;
     line-height: 1.6;
     letter-spacing: 0.03em;
     color: var(--black-text);
+
+    transition: color, background-color, box-shadow, border-radius, 250ms, ease-in-out;
 }
 
 
@@ -724,6 +842,7 @@ margin-right: 8px;
     background: var(--white);
     border-bottom: 1px solid var(--crem);
     
+    transition: color, background, box-shadow, 250ms, ease-in-out;
 }
 .picture:hover,
 .picture:focus{
