--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -121,17 +121,20 @@ border-bottom: 1px solid var(--grey);
     visibility: hidden;
     pointer-events: none;
 }
+.backdrop.is-hidden .modal{
+    transform: translate(-50%, -50%) scale(1.3);
+}
 .modal{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-
     width: 528px;
     height: 581px;
 background-color: var(--white);
 border-radius: 4px;
-transition: transform var(--anim-fast), var(--cubik), 250ms;
+
+transform: translate(-50%, -50%) scale(1);
+transition: transform 250ms cubic-bezier(var(--cubik)) ;
 
 }
 
