--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -105,7 +105,7 @@ border-bottom: 1px solid var(--grey);
     top: 0;
     left: 0;
     min-width: 100%;
-    height: 1026px;
+    height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
 
     transition: var(--anim-fast), cubic-bezier(0.4, 0, 0.2, 1), visibility var(--anim-fast);
@@ -122,7 +122,7 @@ border-bottom: 1px solid var(--grey);
     pointer-events: none;
 }
 .backdrop.is-hidden .modal{
-    transform: translate(-50%, -50%) scale(1.3);
+    transform: translate(-50%, -50%) scale(1.3) 250ms;
 }
 .modal{
     position: absolute;
@@ -134,7 +134,7 @@ background-color: var(--white);
 border-radius: 4px;
 
 transform: translate(-50%, -50%) scale(1);
-transition: transform 250ms cubic-bezier(var(--cubik)) ;
+transition: transform 250ms cubic-bezier(var(--cubik));
 
 }
 
@@ -179,7 +179,7 @@ cursor: pointer;
     height: 100%;
 transform: translateY(100%);
 transition: transform var(--anim-fast),
-    cubic-bezier(0.4, 0, 0.2, 1);
+    cubic-bezier(0.4, 0, 0.2, 1) 250ms;
 }
 .thumb{
     position: relative;
