--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -108,7 +108,7 @@ border-bottom: 1px solid var(--grey);
     height: 100%;
     background-color: rgba(0, 0, 0, 0.2);
 
-    transition: var(--anim-fast), cubic-bezier(0.4, 0, 0.2, 1), visibility var(--anim-fast);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 1;
     visibility: visible;
     pointer-events: initial;
@@ -120,9 +120,12 @@ border-bottom: 1px solid var(--grey);
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
+    
 }
 .backdrop.is-hidden .modal{
-    transform: translate(-50%, -50%) scale(1.3) 250ms;
+    transform: translate(-50%, -50%) scale(0.6);
+
+    
 }
 .modal{
     position: absolute;
@@ -133,10 +136,12 @@ border-bottom: 1px solid var(--grey);
 background-color: var(--white);
 border-radius: 4px;
 
-transform: translate(-50%, -50%) scale(1);
-transition: transform 250ms cubic-bezier(var(--cubik));
+transform: translate(-50%, -50%) scale(1) ;
+transition:cubic-bezier(0.4, 0, 0.2, 1)  250ms   ;
 
 }
+
+
 
 
 .modal-close-button{
